account işlemleri için yetkiler güncellendi. user ve auth islemleri ayrıldı